fix superscripts breaking paragraph line height (#175)
sup elements caused uneven line spacing because the browser default
line-height expanded the line box to accommodate the raised glyph.
Setting line-height: 0 lets the superscript float above the baseline
without affecting vertical rhythm.

Closes #175

--- a/tufte.css
+++ b/tufte.css
@@ -141,6 +141,10 @@ p {
     vertical-align: baseline;
 }
 
+sup {
+    line-height: 0;
+}
+
 /* Chapter Epigraphs */
 div.epigraph {
     margin: 5em 0;
